--- a/arch/arm64/configs/enchilada_defconfig
+++ b/arch/arm64/configs/enchilada_defconfig
@@ -1,3 +1,5 @@
+CONFIG_LOCALVERSION="-LA.UM.10.3.r1-01700-sdm845.0"
+# CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
