--- a/arch/arm64/configs/enchilada_defconfig
+++ b/arch/arm64/configs/enchilada_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-crDroid7+"
+CONFIG_LOCALVERSION="-LA.UM.9.3.r1-02700-sdm845.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
