--- a/arch/arm64/configs/enchilada_defconfig
+++ b/arch/arm64/configs/enchilada_defconfig
@@ -47,13 +47,7 @@ CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
-CONFIG_MODULES=y
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODVERSIONS=y
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
-CONFIG_MODULE_SIG_SHA512=y
+# CONFIG_MODULES is not set
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_ARCH_QCOM=y
@@ -308,7 +302,7 @@ CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_USB_RTL8152=y
 CONFIG_USB_USBNET=y
-CONFIG_WIL6210=m
+CONFIG_WIL6210=y
 # CONFIG_WIL6210_TRACING is not set
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
@@ -335,7 +329,7 @@ CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_DEVPORT is not set
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
+CONFIG_MSM_RDBG=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_QCOM_GENI=y
 CONFIG_SPI=y
@@ -400,10 +394,10 @@ CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
-CONFIG_DVB_MPQ=m
-CONFIG_DVB_MPQ_DEMUX=m
+CONFIG_DVB_MPQ=y
+CONFIG_DVB_MPQ_DEMUX=y
 CONFIG_DVB_MPQ_TSPP1=y
-CONFIG_TSPP=m
+CONFIG_TSPP=y
 CONFIG_VIDEO_ALTEK_ISP=y
 CONFIG_QCOM_KGSL=y
 CONFIG_DRM=y
@@ -476,7 +470,7 @@ CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
-CONFIG_MMC_TEST=m
+CONFIG_MMC_TEST=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
@@ -514,7 +508,7 @@ CONFIG_SPS_SUPPORT_NDP_BAM=y
 CONFIG_QPNP_COINCELL=y
 CONFIG_QPNP_REVID=y
 CONFIG_USB_BAM=y
-CONFIG_MSM_11AD=m
+CONFIG_MSM_11AD=y
 CONFIG_SEEMP_CORE=y
 CONFIG_QCOM_GENI_SE=y
 CONFIG_MSM_GCC_SDM845=y
@@ -538,7 +532,7 @@ CONFIG_IOMMU_TESTS=y
 CONFIG_QCOM_RUN_QUEUE_STATS=y
 CONFIG_QCOM_LLCC=y
 CONFIG_QCOM_SDM845_LLCC=y
-CONFIG_QCOM_LLCC_PERFMON=m
+CONFIG_QCOM_LLCC_PERFMON=y
 CONFIG_MSM_SERVICE_LOCATOR=y
 CONFIG_MSM_SERVICE_NOTIFIER=y
 CONFIG_SETUP_SSR_NOTIF_TIMEOUTS=y
